<resources>
    <string name="app_name">综合查询</string>
    <string name="work">上下班打卡</string>
    <string name="basicinfo">基本信息</string>
    <string name="basicinfo_cardno">卡号： %1$s</string>
    <string name="basicinfo_name">姓名： %1$s</string>
    <string name="basicinfo_expire">有效期： %1$s</string>
    <string name="availableshop">可选择门店：</string>

    <string name="open">开</string>
    <string name="close">关</string>
    <string name="search">搜索</string>
    <string name="rate_setting">进入评星综合设置</string>
    <string name="rate">评星</string>
    <string name="tel">致电</string>
    <string name="choose_date">选择日期</string>
    <string name="book">预约</string>
    <string name="confrim">确定</string>
    <string name="cancel_app">取消预约</string>
    <string name="canceled">已预约</string>

    <string name="book_success">预约成功</string>


    <string name="hint_inputname">请输入教练的姓名</string>
    <string name="hint_shopname">请输入店铺名称关键字</string>

    <string name="loading">正在加载...</string>

    <string name="guide1">课程相关</string>
    <string name="guide2">其他</string>

    <string name="onedayonecourse">当天某一课程所有排课</string>
    <string name="onedayonecourse2">当天单课查询</string>
    <string name="search_coach_course">根据教练查课</string>
    <string name="search_shop">查询店铺课程</string>
    <string name="my_appointment">我的预约</string>

    <string name="recommond">特别推荐</string>
    <string name="pending">观察待定</string>

    <string name="close_label">关闭标签</string>
    <string name="choose">请选择</string>

    <string name="error_no_coachinfo">未获得教练信息</string>

    <string name="oper_success">操作成功</string>
    <string name="oper_fail">操作失败</string>
    <string name="title_rating">评分列表</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
