<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/basicinfo"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
        android:id="@+id/basic_cardno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basicinfo_cardno" />

        <TextView
            android:id="@+id/basic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basicinfo_name" />

        <TextView
            android:id="@+id/basic_expire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basicinfo_expire" />
    </LinearLayout>

</LinearLayout>
