<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.zy.tera.NavigationActivity">

    <TextView
        android:id="@+id/guide1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide1"
        style="@style/itemstyle_20sp_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide1"
        />


    <!--当天某一课程所有排课 -->
    <Button
        android:id="@+id/onedayonecourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/space1"
        android:text="@string/onedayonecourse"/>

    <!--当天单课查询 -->
    <Button
        android:id="@+id/onedayonecourse2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/onedayonecourse"
        android:text="@string/onedayonecourse2"/>

    <!--根据教练查课 -->
    <Button
        android:id="@+id/search_coach_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/onedayonecourse2"
        android:text="@string/search_coach_course"/>

    <!--查询店铺课程 -->
    <Button
        android:id="@+id/search_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_coach_course"
        android:text="@string/search_shop"/>

    <!--我的预约 -->
    <Button
        android:id="@+id/my_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_shop"
        android:text="@string/my_appointment"/>

    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_appointment"
        />

    <TextView
        android:id="@+id/guide2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide2"
        style="@style/itemstyle_20sp_black"
        app:layout_constraintTop_toBottomOf="@id/space2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide2"
        />

    <!--泛微签到 -->
    <Button
        android:id="@+id/checkin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/space3"
        android:text="@string/work"/>

</androidx.constraintlayout.widget.ConstraintLayout>
