<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.zy.tera.fragments.SearchCoachFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_rate_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_setting" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_input"
                android:layout_weight="1"
                android:hint="@string/hint_inputname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />

            <Button
                android:id="@+id/btn_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_coachcourse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</FrameLayout>
