<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_drawer_layout"
    tools:context=".MainActivity"
    android:background="@android:color/white">

    <!-- 下面显示的主要是主界面内容 -->
    <RelativeLayout
        android:id="@+id/main_content_frame_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center">

        <FrameLayout
            android:id="@+id/mainFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>

    </RelativeLayout>

    <!-- 左侧滑动栏 -->
    <RelativeLayout
        android:id="@+id/main_left_drawer_layout"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@mipmap/logo"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                android:layout_marginBottom="5dp"
                />

            <Button
                android:id="@+id/menu_basicinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/itemstyle"
                android:layout_centerInParent="true"
                android:text="@string/basicinfo" />

            <Button
                android:id="@+id/menu_onedayonecourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                style="@style/itemstyle"
                android:text="@string/onedayonecourse2" />

            <Button
                android:id="@+id/menu_search_coach_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                style="@style/itemstyle"
                android:text="@string/search_coach_course" />

        </LinearLayout>

    </RelativeLayout>



</android.support.v4.widget.DrawerLayout>